<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="15sp"
        android:paddingStart="15sp"
        android:paddingLeft="15sp"
        android:paddingTop="15sp"
        android:paddingEnd="15sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:text="@string/select_a_layout_type_to_view_an_example_the_onclick_attribute_of_each_button_will_call_a_function_which_executes_setcontentview_to_load_the_new_layout"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="clip_vertical"
            android:text="@string/load_constraint_layout"
            android:textSize="20sp" />

        <Button
            android:id="@+id/constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="clip_vertical"
            android:text="@string/load_table_layout"
            android:textSize="20sp" />

        <Button
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="70sp"
        android:contentDescription="@string/rate_things"
        android:layout_marginRight="15sp" />

    <Button
        android:id="@+id/storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Storage" />

</LinearLayout>